# kit_code_t35e

./: README.md
Slave/: CMakeLists.txt
Slave/Config/: ParametersConfig.ini  ParametersConfig.json  Robot_Slave.launch  checkIPStatus.sh  initPos.ini  log4cplus.properties  scp.sh
Slave/include/Common/FtpClient/: CFtpClient.cpp  CFtpClient.h
Slave/include/Common/HIKClient/: Alarm.cpp  Alarm.h  HIKClient.cpp  HIKClient.h  HttpClient.cpp  HttpClient.h  JsonParse.cpp  JsonParse.h  ParseData.cpp  ParseData.h  XmlParse.cpp  XmlParse.h
Slave/include/Common/HttpPost/: CHttpPost.cpp  CHttpPost.hpp
Slave/include/Common/IRAYClient/: IRAYClient.cpp  IRAYClient.h  IRNet.h  LinuxDef.cpp  LinuxDef.h  VSNETStructDef.h
Slave/include/Common/ObserverPattern/: Observer.h
Slave/include/Common/TcpClient/: TcpClient.cpp  TcpClient.h  TcpCltSession.cpp  TcpCltSession.h
Slave/include/Common/TcpClient/TinyFrame/: CMakeLists.txt
Slave/include/Common/TcpClient/TinyFrame/demo/socket_demo/: TF_Config.h
Slave/include/Common/inirw/: inirw.c  inirw.h
Slave/include/Common/ipTint/: ipTint.c  ipTint.h
Slave/include/Driver/: AlarmDriver.h  AudioDriver.h  BatteryDeviceDriver.h  BatteryDriver.h  BusinessInformation.h  ChargePileDriver.h  FireDoorDriver.h  HallDriver.h  IlluminateDriver.h  IndustrialCameraDriver.h  InfraredDriver.h  LedDriver.h  LowConsumeManage.h  MotorDriver.h  MyLog4CXX.h  MySQLDriver.h  PDDMotorDriver.h  PTZDriver.h  PartialDischargeDetectorDriver.h  PowerDriver.h  RFIDDriver.h  ROSDriver.h  RadarDriver.h  RadarDriver_KS104.h  RadarDriver_T30UX.h  RadarInterface.h  SensorBoardEx.h  ThermalDriver.h  TouchDriver.h  UpGradeDriver.h  VersionQuery.h  ZMQDriver.h
Slave/include/Transaction/: Capabilities.h  ChargePile.h  ChargePileService.h  ComParse.h  ConfigServer.h  ControlBoard.h  Dialogue.h  FireDoor.h  FireDoorService.h  ImageProcessManager.h  IndustrialCamera.h  MapService.h  Motor.h  MySQLServer.h  RadarManager.h  Robot.h  RobotMap.h  Setting.h  SettingService.h  Task.h  TaskService.h  ThermalImager.h  ViewPoint.h  Warning.h  WarningManager.h  WarningService.h
Slave/include/Transaction/MoveTaskManage/: CheckFDCommand.h  Command.h  CommandFactory.h  DoorSwitchCommand.h  DriveModeCommand.h  Exception.h  GotoCommand.h  GotoHome.h  HallDetCommand.h  ImageRecCommand.h  InfraredSwitchCommand.h  LiftArmCommand.h  LiftLockCommand.h  MoveControlCommand.h  MoveException.h  MoveTask.h  MoveTaskComponent.h  MoveTaskItem.h  MoveTaskManage.h  PddDetCommand.h  PositionMove.h  PositionPlan.h  PositionPlanService.h  PtzArmCommand.h  PtzRotateCommand.h  RFID.h  RFIDService.h  RechargeCommand.h  RecordVideoCommand.h  RecoverSpeedCommand.h  RunModeCommand.h  SQLInsertCommand.h  SQLOperationCommand.h  SetMaxCurrentCommand.h  SetSpeedCommand.h  T7AChargeCommand.h  T7AGotoCommand.h  TakePhotoCommand.h  TakePicCommand.h  TakePicException.h  (+2 more)
Slave/include/base/: GPIOBase.h  I2CBase.h  INIParser.h  ModbusBase.h  Observer.h  Observers.h  ROSBase.h  SerialPortBase.h  SingleTon.h  Subject.h  Subjects.h  UartPortSelect.h
Slave/include/base/IPCBase/: MsgComm.h  ShmComm.h
Slave/lib/IUlirNet/arm_64/: IUlirNetDevSDK.h
Slave/lib/Poco/arm_64/: libPocoEncodings.so.71  libPocoMongoDB.so.71  libPocoRedis.so.71
Slave/lib/alsalib/arm_64/: libasound.la  libatopology.la
Slave/lib/alsalib/arm_64/pkgconfig/: alsa.pc
Slave/lib/json/arm_64/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Slave/lib/log4cplus/arm_64/: liblog4cplus.la  liblog4cplusU.la
Slave/lib/log4cplus/arm_64/pkgconfig/: log4cplus.pc
Slave/lib/modbus/arm_64/: libmodbus.la  libmodbus.so.5
Slave/lib/modbus/arm_64/pkgconfig/: libmodbus.pc
Slave/lib/zmq/arm_64/: libzmq.la  libzmqpp.so.4.2.0
Slave/lib/zmq/arm_64/pkgconfig/: libzmq.pc
Slave/src/: main.cpp
Slave/src/Driver/: AlarmDriver.cpp  AudioDriver.cpp  BatteryDriver.cpp  BusinessInformation.cpp  ChargePileDriver.cpp  FireDoorDriver.cpp  HallDriver.cpp  IlluminateDriver.cpp  IndustrialCameraDriver.cpp  InfraredDriver.cpp  LedDriver.cpp  LowConsumeManage.cpp  MotorDriver.cpp  MyLog4CXX.cpp  MySQLDriver.cpp  PDDMotorDriver.cpp  PTZDriver.cpp  PartialDischargeDetectorDriver.cpp  PowerDriver.cpp  RFIDDriver.cpp  ROSDriver.cpp  RadarDriver.cpp  RadarDriver_KS104.cpp  RadarDriver_T30UX.cpp  SensorBoardEx.cpp  ThermalDriver.cpp  UpGradeDriver.cpp  VersionQuery.cpp  ZMQDriver.cpp
Slave/src/Transaction/: Capabilities.cpp  ChargePile.cpp  ChargePileService.cpp  ComParse.cpp  ConfigServer.cpp  Dialogue.cpp  FireDoor.cpp  FireDoorService.cpp  ImageProcessManager.cpp  IndustrialCamera.cpp  MapService.cpp  Motor.cpp  MySQLServer.cpp  RadarManager.cpp  Robot.cpp  RobotMap.cpp  Setting.cpp  SettingService.cpp  Task.cpp  TaskService.cpp  ThermalImager.cpp  ViewPoint.cpp  Warning.cpp  WarningManager.cpp  WarningService.cpp
Slave/src/Transaction/MoveTaskManage/: CheckFDCommand.cpp  Command.cpp  CommandFactory.cpp  DoorSwitchCommand.cpp  DriveModeCommand.cpp  Exception.cpp  GotoCommand.cpp  GotoHome.cpp  HallDetCommand.cpp  ImageRecCommand.cpp  InfraredSwitchCommand.cpp  LiftArmCommand.cpp  LiftLockCommand.cpp  MoveControlCommand.cpp  MoveException.cpp  MoveTask.cpp  MoveTaskComponent.cpp  MoveTaskItem.cpp  MoveTaskManage.cpp  PddDetCommand.cpp  PositionMove.cpp  PositionPlan.cpp  PositionPlanService.cpp  PtzArmCommand.cpp  PtzRotateCommand.cpp  RFID.cpp  RFIDService.cpp  RechargeCommand.cpp  RecordVideoCommand.cpp  RecoverSpeedCommand.cpp  RunModeCommand.cpp  SQLInsertCommand.cpp  SQLOperationCommand.cpp  SetMaxCurrentCommand.cpp  SetSpeedCommand.cpp  T7AChargeCommand.cpp  T7AGotoCommand.cpp  TakePhotoCommand.cpp  TakePicCommand.cpp  TakePicException.cpp  (+2 more)
Slave/src/base/: GPIOBase.cpp  I2CBase.cpp  INIParser.cpp  ModbusBase.cpp  ROSBase.cpp  SerialPortBase.cpp  UartPortSelect.cpp
zmq/: CMakeLists.txt
zmq/Deploy/: README.txt  upgrade.sh
zmq/lib/json/: libjsoncpp.so.0
zmq/lib/zmq/: libzmqpp.so.4
zmq/src/: server.cpp
